DCBBRAIN-4968 Рефакторинг тестов rest/partner/..