@@ -1,6 +1,7 @@
 package ru.sberbank.pprb.sbbol.partners.rest.partner;
 
 import org.apache.commons.lang3.RandomStringUtils;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.context.ContextConfiguration;
@@ -20,6 +21,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import static io.qameta.allure.Allure.step;
 import static org.apache.commons.lang3.RandomStringUtils.randomNumeric;
 import static org.assertj.core.api.Assertions.assertThat;
 import static ru.sberbank.pprb.sbbol.partners.exception.common.ErrorCode.MODEL_VALIDATION_EXCEPTION;
@@ -33,314 +35,392 @@ public class ContactPhoneControllerTest extends AbstractIntegrationTest {
     public static final String baseRoutePath = "/partner/contact/phone";
 
     @Test
+    @DisplayName("POST /partner/contact/phones/view негативные сценарии")
     void testNegativeViewPartnerPhone() {
-        Partner partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
+        var partner = step("Подготовка тестовых данных. Partner", () ->
+            createValidPartner(RandomStringUtils.randomAlphabetic(10)));
+        var contact = step("Подготовка тестовых данных. Contact", () -> {
+            var contactTest = createValidContact(partner.getId(), partner.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            return contactTest;
+        });
 
-        var filter1 = new PhonesFilter()
-            .digitalId(partner.getDigitalId())
-            .unifiedIds(
-                List.of(
-                    contact.getId()
-                )
-            )
-            .pagination(new Pagination()
-                .count(4));
-        var response = post(
-            "/partner/contact/phones/view",
-            HttpStatus.BAD_REQUEST,
-            filter1,
-            Error.class
-        );
-        assertThat(response)
-            .isNotNull();
-        assertThat(response.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var response = step("Выполнение post-запроса /partner/contact/phones/view. Не заполнено поле pagination.offset", () -> {
+            var filter1 = new PhonesFilter()
+                .digitalId(partner.getDigitalId())
+                .unifiedIds(
+                    List.of(
+                        contact.getId()))
+                .pagination(new Pagination()
+                    .count(4));
+            return post(
+                "/partner/contact/phones/view",
+                HttpStatus.BAD_REQUEST,
+                filter1,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(response)
+                .isNotNull();
+            assertThat(response.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
 
-        var filter2 = new PhonesFilter()
-            .digitalId(partner.getDigitalId())
-            .unifiedIds(
-                List.of(
-                    contact.getId()
-                )
-            );
-        var response1 = post(
-            "/partner/contact/phones/view",
-            HttpStatus.BAD_REQUEST,
-            filter2,
-            Error.class
-        );
-        assertThat(response1)
-            .isNotNull();
-        assertThat(response1.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var response1 = step("Выполнение post-запроса /partner/contact/phones/view. Не заполнено поле pagination", () -> {
+            var filter2 = new PhonesFilter()
+                .digitalId(partner.getDigitalId())
+                .unifiedIds(
+                    List.of(
+                        contact.getId()));
+            return post(
+                "/partner/contact/phones/view",
+                HttpStatus.BAD_REQUEST,
+                filter2,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(response1)
+                .isNotNull();
+            assertThat(response1.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
 
-        var filter3 = new PhonesFilter()
-            .digitalId(partner.getDigitalId())
-            .unifiedIds(
-                List.of(
-                    contact.getId()
-                )
-            )
-            .pagination(new Pagination()
-                .offset(0));
-        var response2 = post(
-            "/partner/contact/phones/view",
-            HttpStatus.BAD_REQUEST,
-            filter3,
-            Error.class
-        );
-        assertThat(response2)
-            .isNotNull();
-        assertThat(response2.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var response2 = step("Выполнение post-запроса /partner/contact/phones/view. Не заполнено поле pagination.count", () -> {
+            var filter3 = new PhonesFilter()
+                .digitalId(partner.getDigitalId())
+                .unifiedIds(
+                    List.of(
+                        contact.getId()))
+                .pagination(new Pagination()
+                    .offset(0));
+            return post(
+                "/partner/contact/phones/view",
+                HttpStatus.BAD_REQUEST,
+                filter3,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(response2)
+                .isNotNull();
+            assertThat(response2.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
     }
 
+
     @Test
+    @DisplayName("POST /partner/contact/phones/view позитивный сценарий сценарий")
     void testViewContactPhone() {
-        Partner partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
-        createPhone(contact.getId(), contact.getDigitalId());
+        var contact = step("Подготовка тестовых данных", () -> {
+            Partner partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            var contactTest = createValidContact(partner.getId(), partner.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            createPhone(contactTest.getId(), contactTest.getDigitalId());
+            return contactTest;
+        });
 
-        var filter1 = new PhonesFilter()
-            .digitalId(contact.getDigitalId())
-            .unifiedIds(
-                List.of(
-                    contact.getId()
-                )
-            )
-            .pagination(new Pagination()
-                .count(4)
-                .offset(0));
-        var response = post(
-            "/partner/contact/phones/view",
-            HttpStatus.OK,
-            filter1,
-            PhonesResponse.class
-        );
-        assertThat(response)
-            .isNotNull();
-        assertThat(response.getPhones())
-            .hasSize(4);
-        assertThat(response.getPagination().getHasNextPage())
-            .isEqualTo(Boolean.TRUE);
+        var response = step("Выполнение post-запроса /partner/contact/phones/view", () -> {
+            var filter1 = new PhonesFilter()
+                .digitalId(contact.getDigitalId())
+                .unifiedIds(
+                    List.of(
+                        contact.getId()))
+                .pagination(new Pagination()
+                    .count(4)
+                    .offset(0));
+            return post(
+                "/partner/contact/phones/view",
+                HttpStatus.OK,
+                filter1,
+                PhonesResponse.class);
+        });
+
+        step("Проверка корректности ответа", () -> {
+            assertThat(response)
+                .isNotNull();
+            assertThat(response.getPhones())
+                .hasSize(4);
+            assertThat(response.getPagination().getHasNextPage())
+                .isEqualTo(Boolean.TRUE);
+        });
     }
 
     @Test
+    @DisplayName("PUT /partner/contact/phone проверка валидации")
     void testUpdateContactPhoneValidation() {
-        Partner partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        var phone = createPhone(contact.getId(), contact.getDigitalId());
-        phone.setPhone(randomNumeric(13));
-        var newUpdatePhone = put(
-            baseRoutePath,
-            HttpStatus.OK,
-            updatePhone(phone),
-            Phone.class
-        );
-        assertThat(newUpdatePhone)
-            .isNotNull();
-        assertThat(newUpdatePhone.getPhone())
-            .isEqualTo(newUpdatePhone.getPhone());
-        assertThat(phone.getPhone())
-            .isNotEqualTo(newUpdatePhone.getPhone());
+        var contact = step("Подготовка тестовых данных. Contact", () -> {
+            Partner partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            return createValidContact(partner.getId(), partner.getDigitalId());
+        });
+        var phone = step("Подготовка тестовых данных. Phone", () -> {
+            Phone phoneTest = createPhone(contact.getId(), contact.getDigitalId());
+            phoneTest.setPhone(randomNumeric(13));
+            return phoneTest;
+        });
 
-        var phone1 = createPhone(contact.getId(), contact.getDigitalId());
-        updatePhone(phone1);
-        phone1.setPhone("+" + (randomNumeric(12)));
-        var newUpdatePhone1 = put(
-            baseRoutePath,
-            HttpStatus.BAD_REQUEST,
-            phone1,
-            Error.class
-        );
-        assertThat(newUpdatePhone1)
-            .isNotNull();
-        assertThat(newUpdatePhone1.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var newUpdatePhone = step("Выполнение put-запроса /partner/contact/phone. Валидное поле phone", () ->
+            put(
+                baseRoutePath,
+                HttpStatus.OK,
+                updatePhone(phone),
+                Phone.class));
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone)
+                .isNotNull();
+            assertThat(newUpdatePhone.getPhone())
+                .isEqualTo(newUpdatePhone.getPhone());
+            assertThat(phone.getPhone())
+                .isNotEqualTo(newUpdatePhone.getPhone());
+        });
 
-        var phone2 = createPhone(contact.getId(), contact.getDigitalId());
-        updatePhone(phone2);
-        phone2.setPhone((randomNumeric(11)) + "+");
-        var newUpdatePhone2 = put(
-            baseRoutePath,
-            HttpStatus.BAD_REQUEST,
-            phone2,
-            Error.class
-        );
-        assertThat(newUpdatePhone2)
-            .isNotNull();
-        assertThat(newUpdatePhone2.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var newUpdatePhone1 = step("Выполнение put-запроса /partner/contact/phone. Невалидное поле phone", () -> {
+            var phone1 = createPhone(contact.getId(), contact.getDigitalId());
+            updatePhone(phone1);
+            phone1.setPhone("+" + (randomNumeric(12)));
+            return put(
+                baseRoutePath,
+                HttpStatus.BAD_REQUEST,
+                phone1,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone1)
+                .isNotNull();
+            assertThat(newUpdatePhone1.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
 
-        var phone3 = createPhone(contact.getId(), contact.getDigitalId());
-        updatePhone(phone3);
-        phone3.setPhone((randomNumeric(6)) + "+" + (randomNumeric(5)));
-        var newUpdatePhone3 = put(
-            baseRoutePath,
-            HttpStatus.BAD_REQUEST,
-            phone3,
-            Error.class
-        );
-        assertThat(newUpdatePhone3)
-            .isNotNull();
-        assertThat(newUpdatePhone3.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var newUpdatePhone2 = step("Выполнение put-запроса /partner/contact/phone. Невалидное поле phone", () -> {
+            var phone2 = createPhone(contact.getId(), contact.getDigitalId());
+            updatePhone(phone2);
+            phone2.setPhone((randomNumeric(11)) + "+");
+            return put(
+                baseRoutePath,
+                HttpStatus.BAD_REQUEST,
+                phone2,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone2)
+                .isNotNull();
+            assertThat(newUpdatePhone2.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
 
-        var phone4 = createPhone(contact.getId(), contact.getDigitalId());
-        updatePhone(phone4);
-        phone4.setPhone((randomNumeric(4)) + "+" + (randomNumeric(5)) + "+");
-        var newUpdatePhone4 = put(
-            baseRoutePath,
-            HttpStatus.BAD_REQUEST,
-            phone4,
-            Error.class
-        );
-        assertThat(newUpdatePhone4)
-            .isNotNull();
-        assertThat(newUpdatePhone4.getCode())
-            .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        var newUpdatePhone3 = step("Выполнение put-запроса /partner/contact/phone. Невалидное поле phone", () -> {
+            var phone3 = createPhone(contact.getId(), contact.getDigitalId());
+            updatePhone(phone3);
+            phone3.setPhone((randomNumeric(6)) + "+" + (randomNumeric(5)));
+            return put(
+                baseRoutePath,
+                HttpStatus.BAD_REQUEST,
+                phone3,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone3)
+                .isNotNull();
+            assertThat(newUpdatePhone3.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
+
+        var newUpdatePhone4 = step("Выполнение put-запроса /partner/contact/phone. Невалидное поле phone", () -> {
+            var phone4 = createPhone(contact.getId(), contact.getDigitalId());
+            updatePhone(phone4);
+            phone4.setPhone((randomNumeric(4)) + "+" + (randomNumeric(5)) + "+");
+            return put(
+                baseRoutePath,
+                HttpStatus.BAD_REQUEST,
+                phone4,
+                Error.class);
+        });
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone4)
+                .isNotNull();
+            assertThat(newUpdatePhone4.getCode())
+                .isEqualTo(MODEL_VALIDATION_EXCEPTION.getValue());
+        });
     }
 
     @Test
+    @DisplayName("POST /partner/contact/phone создание телефона контакта")
     void testCreateContactPhone() {
-        var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        var expected = getPhone(contact.getId(), contact.getDigitalId());
-        var phone = createPhone(expected);
-        assertThat(phone)
-            .usingRecursiveComparison()
-            .ignoringFields(
-                "id",
-                "version"
-            )
-            .isEqualTo(expected);
+        var expected = step("Подготовка тестовых данных. PhoneCreate", () -> {
+            var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            var contact = createValidContact(partner.getId(), partner.getDigitalId());
+            return getPhone(contact.getId(), contact.getDigitalId());
+        });
+        var phone = step("Выполнение post-запроса /partner/contact/phone. Create Phone", () ->
+            createPhone(expected));
+
+        step("Проверка корректности ответа", () ->
+            assertThat(phone)
+                .usingRecursiveComparison()
+                .ignoringFields(
+                    "id",
+                    "version")
+                .isEqualTo(expected));
     }
 
     @Test
+    @DisplayName("PUT /partner/contact/phone обновление телефона контакта")
     void testUpdateContactPhone() {
-        var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        var phone = createPhone(contact.getId(), contact.getDigitalId());
-        var newUpdatePhone = put(
-            baseRoutePath,
-            HttpStatus.OK,
-            updatePhone(phone),
-            Phone.class
-        );
-        assertThat(newUpdatePhone)
-            .isNotNull();
-        assertThat(newUpdatePhone.getPhone())
-            .isEqualTo(newUpdatePhone.getPhone());
-        assertThat(phone.getPhone())
-            .isNotEqualTo(newUpdatePhone.getPhone());
+        var phone = step("Подготовка тестовых данных", () -> {
+            var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            var contact = createValidContact(partner.getId(), partner.getDigitalId());
+            return createPhone(contact.getId(), contact.getDigitalId());
+        });
+
+        var newUpdatePhone = step("Выполнение put-запроса /partner/contact/phone. Update Phone", () ->
+            put(
+                baseRoutePath,
+                HttpStatus.OK,
+                updatePhone(phone),
+                Phone.class));
+
+        step("Проверка корректности ответа", () -> {
+            assertThat(newUpdatePhone)
+                .isNotNull();
+            assertThat(newUpdatePhone.getPhone())
+                .isEqualTo(newUpdatePhone.getPhone());
+            assertThat(phone.getPhone())
+                .isNotEqualTo(newUpdatePhone.getPhone());
+        });
+
     }
 
     @Test
+    @DisplayName("PUT /partner/contact/phone негативный сценарий обновления телефона контакта")
     void negativeTestUpdatePhoneVersion() {
-        var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        var phone = createPhone(contact.getId(), contact.getDigitalId());
-        Long version = phone.getVersion() + 1;
-        phone.setVersion(version);
-        var phoneError = put(
+        var phone = step("Подготовка тестовых данных. Phone", () -> {
+            var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            var contact = createValidContact(partner.getId(), partner.getDigitalId());
+            return createPhone(contact.getId(), contact.getDigitalId());
+        });
+
+        Long version = step("Изменение версии", () -> {
+            Long versionTest = phone.getVersion() + 1;
+            phone.setVersion(versionTest);
+            return versionTest;
+        });
+
+        var phoneError = step("Выполнение put-запроса /partner/contact/phone. Обновление телефона", () -> put(
             baseRoutePath,
             HttpStatus.BAD_REQUEST,
             updatePhone(phone),
-            Error.class
-        );
-        assertThat(phoneError.getCode())
-            .isEqualTo(OPTIMISTIC_LOCK_EXCEPTION.getValue());
-        assertThat(phoneError.getDescriptions().stream().map(Descriptions::getMessage).findAny().orElse(null))
-            .contains("Версия записи в базе данных " + (phone.getVersion() - 1) +
-                " не равна версии записи в запросе version=" + version);
+            Error.class));
+
+        step("Проверка корректности ответа", () -> {
+            assertThat(phoneError.getCode())
+                .isEqualTo(OPTIMISTIC_LOCK_EXCEPTION.getValue());
+            assertThat(phoneError.getDescriptions().stream().map(Descriptions::getMessage).findAny().orElse(null))
+                .contains("Версия записи в базе данных " + (phone.getVersion() - 1) +
+                    " не равна версии записи в запросе version=" + version);
+        });
     }
 
     @Test
+    @DisplayName("PUT /partner/contact/phone позитивный сценарий обновления телефона контакта")
     void positiveTestUpdatePhoneVersion() {
-        var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
-        var phone = createPhone(contact.getId(), contact.getDigitalId());
-        var updatePhone = put(
-            baseRoutePath,
-            HttpStatus.OK,
-            updatePhone(phone),
-            Phone.class
-        );
-        var checkPhone = new PhonesFilter();
-        checkPhone.digitalId(updatePhone.getDigitalId());
-        checkPhone.unifiedIds(Collections.singletonList(updatePhone.getUnifiedId()));
-        checkPhone.pagination(new Pagination()
-            .count(4)
-            .offset(0));
-        var response = post(
-            "/partner/contact/phones/view",
-            HttpStatus.OK,
-            checkPhone,
-            PhonesResponse.class);
-        assertThat(response)
-            .isNotNull();
-        assertThat(response.getPhones())
-            .isNotNull();
-        assertThat(response.getPhones()
-            .stream()
-            .filter(curPhone -> curPhone.getId()
-                .equals(phone.getId()))
-            .map(Phone::getVersion)
-            .findAny()
-            .orElse(null))
-            .isEqualTo(phone.getVersion() + 1);
-    }
+        var phone = step("Подготовка тестовых данных", () -> {
+            var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            var contact = createValidContact(partner.getId(), partner.getDigitalId());
+            return createPhone(contact.getId(), contact.getDigitalId());
+        });
 
-    @Test
-    void testDeleteContactPhone() {
-        var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
-        var contact = createValidContact(partner.getId(), partner.getDigitalId());
+        var updatePhone = step("Выполнение put-запроса /partner/contact/phone", () ->
+            put(
+                baseRoutePath,
+                HttpStatus.OK,
+                updatePhone(phone),
+                Phone.class));
 
-        var filter1 = new PhonesFilter()
-            .digitalId(contact.getDigitalId())
-            .unifiedIds(
-                List.of(
-                    contact.getId()
-                )
-            )
-            .pagination(new Pagination()
+        var checkPhone = step("Подготовка фильтра", () -> {
+            var phonesFilter = new PhonesFilter();
+            phonesFilter.digitalId(updatePhone.getDigitalId());
+            phonesFilter.unifiedIds(Collections.singletonList(updatePhone.getUnifiedId()));
+            phonesFilter.pagination(new Pagination()
                 .count(4)
                 .offset(0));
-        var actualPhone = post(
-            "/partner/contact/phones/view",
-            HttpStatus.OK,
-            filter1,
-            PhonesResponse.class
-        );
-        assertThat(actualPhone)
-            .isNotNull();
+            return phonesFilter;
+        });
 
-        var deletePhone =
+        var response = step("Выполнение post-запроса /partner/contact/phones/view", () ->
+            post(
+                "/partner/contact/phones/view",
+                HttpStatus.OK,
+                checkPhone,
+                PhonesResponse.class));
+
+        step("Проверка корректности ответа", () -> {
+            assertThat(response)
+                .isNotNull();
+            assertThat(response.getPhones())
+                .isNotNull();
+            assertThat(response.getPhones()
+                .stream()
+                .filter(curPhone -> curPhone.getId()
+                    .equals(phone.getId()))
+                .map(Phone::getVersion)
+                .findAny()
+                .orElse(null))
+                .isEqualTo(phone.getVersion() + 1);
+        });
+    }
+
+    @Test
+    @DisplayName("DELETE /partner/contact/phones/{digitalId} удаление телефона контакта")
+    void testDeleteContactPhone() {
+        var contact = step("подготовка тестовых данных", () -> {
+            var partner = createValidPartner(RandomStringUtils.randomAlphabetic(10));
+            return createValidContact(partner.getId(), partner.getDigitalId());
+        });
+
+        var filter1 = step("Подготовка фильтра", () ->
+            new PhonesFilter()
+                .digitalId(contact.getDigitalId())
+                .unifiedIds(
+                    List.of(
+                        contact.getId()))
+                .pagination(new Pagination()
+                    .count(4)
+                    .offset(0)));
+
+        var actualPhone = step("Выполнение post-запроса /partner/contact/phones/view", () ->
+            post(
+                "/partner/contact/phones/view",
+                HttpStatus.OK,
+                filter1,
+                PhonesResponse.class));
+        step("Проверка корректности ответа", () ->
+            assertThat(actualPhone)
+                .isNotNull());
+
+        var deletePhone = step("Выполнение delete-запроса /partner/contact/phones/{digitalId}", () ->
             delete(
                 "/partner/contact/phones/{digitalId}",
                 HttpStatus.NO_CONTENT,
                 Map.of("ids", actualPhone.getPhones().get(0).getId()),
                 contact.getDigitalId()
-            ).getBody();
-        assertThat(deletePhone)
-            .isNotNull();
+            ).getBody());
+        step("Проверка корректности ответа", () ->
+            assertThat(deletePhone)
+                .isNotNull());
 
-        var searchPhone = post(
-            "/partner/contact/phones/view",
-            HttpStatus.OK,
-            filter1,
-            PhonesResponse.class
-        );
-        assertThat(searchPhone.getPhones())
-            .isNull();
+        var searchPhone = step("Выполнение post-запроса /partner/contact/phones/view", () ->
+            post(
+                "/partner/contact/phones/view",
+                HttpStatus.OK,
+                filter1,
+                PhonesResponse.class));
+        step("Проверка корректности ответа", () ->
+            assertThat(searchPhone.getPhones())
+                .isNull());
     }
 
     private static PhoneCreate getPhone(UUID partnerUuid, String digitalId) {
